# python-swisscom-internet-box

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
python_swisscom_internet_box.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swisscom_internet_box/: __init__.py  client.py  exceptions.py  models.py
