[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-swisscom-internet-box"
version = "0.1.0"
description = "Python client for the Swisscom Internet-Box"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
]


[project.urls]
Homepage = "https://github.com/anatosun/python-swisscom-internet-box"
